Language file headers updated; duplicate keys removed

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -1,12 +1,12 @@
-; @version: $Id$
+
 ; @package: SobiPro Component for Joomla!
 
 ; @author
 ; Name: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH
 ; Email: sobi[at]sigsiu.net
-; Url: http://www.Sigsiu.NET
+; Url: https://www.Sigsiu.NET
 
-; @copyright Copyright (C) 2006 - 2015 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
+; @copyright Copyright (C) 2006 - 2015 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
 ; @license GNU/GPL Version 3
 ; This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
 ; as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
@@ -15,6 +15,7 @@
 ; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 ; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
+; Translations are made by our translation teams. See https://www.sigsiu.net/sobipro/available-languages/translation-teams.
 
 SP.SECN.CFG.SETTINGS_BOOTSTRAP3STYLES="Bootstrap 3 styles"
 SP.FM.INFORMATION="Information"
@@ -44,15 +45,12 @@ SP.SECN.CFG.ICONS_FONT_AWESOME_3_LOCAL="Font Awesome 3 local (default)"
 SP.OPT_FONTS_ICONS="Font Icons"
 SP.CAT.USE_ICON_FONT="Use Icons Font"
 SP.CAT.ICON_FONT_ADD_CLASS="Add Font Class"
-
 SP.FM.META_SEPARATOR="Description Separator"
 SP.FM.UPLOAD_DEPENDENCY_PREVENT_PARENTS="Allow Selecting Parent"
-
 SP.FM.SEL.LIST_DEPENDENCY="Dependency Options"
 SP.FMN.LIST_DEPENDENCY="Use Dependency List"
 SP.FMN.LIST_DEPENDENCY_FILE="Select Definition File"
 SP.FM.UPLOAD_DEPENDENCY_FILE="Upload Definition File"
-
 SP.FM.IMG.CROP_IMG="Crop Image"
 SP.TB.SAVE_AND_NEW="Save & New"
 SP.TB.SAVE_AS_COPY="Save as Copy"
@@ -66,7 +64,6 @@ SP.CFG.HTML_ELEMENTS="HTML Elements"
 SP.TB.SAVE_WITH_REVISION="Save & Log"
 ;SP.TP.SETTINGS="Settings"
 SP.FMN.ITEMPROP="Item Property"
-
 SP.HEADER_ENTRIES_REJECT="Reject"
 SP.ENTRY_REJECT="Reject Entry"
 SP.ENTRY_REJECT_TPLS="Preload Template"
@@ -80,8 +77,6 @@ SP.ENTRY_REJECT_SAVED_TPL="Template has been saved."
 SP.ENTRY_REJECT_DELETED_TPL="Template has been deleted."
 SP.ENTRY_REJECTED="Entry '%s' has been rejected."
 SP.ENTRY_VERSIONING="Entry History"
-
-
 SP.EN.ENTRY_HISTORY="History"
 SP.HEAD_HISTORY_DATE="Alteration Date"
 SP.HEAD_HISTORY_TYPE="Type"
@@ -103,10 +98,7 @@ SP.HISTORY_REVISION_COMPARE="Compare Revisions"
 SP.HISTORY_REVISION_CURRENT="Current Version"
 SP.HISTORY_REVISION_LOADED="Loaded Version"
 SP.HISTORY_REVISION_DIFF="Difference"
-
 SP.MSG_DEFAULT_ORDERING_SAVED="Current ordering has been saved as default"
-
-; Joomla! Menu (J 1.5)
 SP.SOBI_SELECT_SECTION="Select Section"
 SOBI_SELECT_SECTION="Select Section"
 SP.SOBI_SECTION="Section, Category or Entry"
@@ -119,8 +111,6 @@ SP.SOBI_USER_LISTING="User Listings"
 SP.SOBI_USER_LISTING_EXPL="Displays the list of entries of the logged in user."
 SP.SOBI_DATE_LISTING="Listing by Date"
 SP.SOBI_DATE_LISTING_EXPL="Displays the list of entries created within a certain time period."
-
-; SobiPro Modules
 SP.SEC.CFG.ENTRY_ORDER_BY_POSITION_ASCENDING="Position ascending"
 SP.SEC.CFG.ENTRY_ORDER_BY_POSITION_DESCENDING="Position descending"
 SP.SEC.CFG.ENTRY_ORDER_BY_POPULARITY_ASCENDING="Least popular first"
@@ -131,8 +121,6 @@ SP.SEC.CFG.ENTRY_ORDER_BY_UPDATE_DATE_ASC="Least recently modified first"
 SP.SEC.CFG.ENTRY_ORDER_BY_UPDATE_DATE_DESC="Recently modified first"
 SP.SEC.CFG.ENTRY_ORDER_BY_EXPIRATION_DATE_ASC="Expires next first"
 SP.SEC.CFG.ENTRY_ORDER_BY_EXPIRATION_DATE_DESC="Expires next last"
-
-; General texts
 SP.PLEASE_FILL_IN_ALL_REQUIRED_FIELDS="Please fill in all required fields."
 SP.META_DATA="Meta Data"
 SP.HEADER_ID="Id"
@@ -149,8 +137,6 @@ SP.CLOSE_X="×"
 SP.STATUS_WARNING="Warning"
 SP.STATUS_ERROR="Error"
 SP.STATUS_SUCCESS="Success"
-
-; Toolbar
 SP.TB.SECTIONS="Sections"
 SP.TB.SAVE_ONLY="Save"
 SP.TB.SAVE_EXIT="Save &amp; Exit"
@@ -164,8 +150,6 @@ SP.TB.SET_NOT_REQ="Set as not required"
 SP.TB.EDITABLE_FIELD="Editable"
 SP.TB.SET_EDITABLE="Set field to editable"
 SP.TB.SET_NOT_EDITABLE="Remove editing permissions"
-SP.TB.ENABLE="Enable"
-SP.TB.DISABLE="Disable"
 SP.TB.EXIT="Exit"
 SP.TB.APPROVAL="Approval"
 SP.TB.REVOKE="Revoke"
@@ -209,8 +193,6 @@ SP.TB.JS_DELETE_FIELD_WARN="Are you sure you want to delete the selected field(s
 SP.TB.JS_DELETE_REPO="Are you sure you want to delete this repository?"
 SP.TB.JS_DELETE_SECTION_WARN="Are you sure you want to delete the selected section(s)?"
 SP.TB.JS_DELETE_TEMPLATE_WARN="Are you sure you want to delete this template package?"
-
-; CPanel
 SP.CPANEL_SYSTEM_STATUS="SobiPro System Status"
 SP.CPANEL_POPULAR_ENTRIES="Popular Entries"
 SP.CPANEL_NEW_ENTRIES="New Entries"
@@ -222,8 +204,6 @@ SP.CPANEL_ISSUES_MESSAGE="Message"
 SP.ENTRY.HEADER_COUNTER="Counter"
 SP.ENTRY.HEADER_SECTION="Section"
 SP.ENTRY.HEADER_CREATED_AT="Created at"
-
-; Fields Manager
 SP.HEADER_FIELD_NAME="Field Name"
 SP.HEADER_FIELD_STATE="State"
 SP.HEADER_FIELD_TYPE="Type"
@@ -334,8 +314,6 @@ SP.PREDEFINED_MULTI_DATA_SINGLE_CHOICE="Predefined multi data single choice"
 SP.FIELD.TYPE_OPT_PREDEFINED_MULTI_DATA_SINGLE_CHOICE_SELECT="Single select list"
 SP.FIELD.TYPE_OPT_PREDEFINED_MULTI_DATA_SINGLE_CHOICE_RADIO="Radio buttons"
 SP.FM.INI_WARNING="<strong>Heads up!</strong> There are reserved words which must not be used as the key (the part left of the equal sign). These include: null, yes, no, true, false, on, off, none."
-
-; Fields
 SP.FIELD_WARN_DUPLICATE_OPT_ID="Some option Ids are used several times; a random option Id has been generated."
 SP.FM.ADD_FIELD="Add new 'var:[field_type]' field"
 SP.FMN.FIELD_GENERAL="General Field Settings"
@@ -400,8 +378,6 @@ SP.FMN.LENGTH_ROWS="rows"
 SP.FMN.LENGTH_BYTES="bytes"
 SP.FMN.FREE_RANGE="Free definable Input"
 SP.FM.GENERAL_SEARCH_OPT="via Input Field only"
-
-; Category Chooser
 SP.FMN.CC_TREE="SigsiuTree"
 SP.FMN.CC_SELECT_LIST="Single Select List"
 SP.FMN.CC_MSELECT="Multiple Select List"
@@ -416,8 +392,6 @@ SP.FMN.CC_CATS_LIMIT="max. Categories per Entry"
 SP.FMN.CC_CATS_LIMIT_SUFFIX="categories"
 SP.FMN.CC_IS_PRIMARY="Primary Category Selector"
 SP.FMN.CC_SEARCH_METHOD="Search Method"
-
-; Category and Entry Manager
 SP.CAT.ENTRIES_LIST_HEAD="Entries in: var:[category_name]"
 SP.CATEGORY_LIST_HEADER="Category: var:[category_name]"
 SP.CATEGORIES_IN_LIST_HEAD="Categories in: var:[category_name]"
@@ -435,8 +409,6 @@ SP.AMN.ADD="Add"
 SP.CATEGORY_POSITION_CHANGED="Category position changed."
 SP.ENTRY_POSITION_CHANGED="Entry position changed."
 SP.CATEGORIES_ARE_RE_ORDERED="Categories are re-ordered now."
-
-;; Entries
 SP.HEADER_ENTRIES_NAME="Entry Name"
 SP.HEADER_ENTRIES_STATE="State"
 SP.HEADER_ENTRIES_APPROVAL="Approval"
@@ -464,8 +436,6 @@ SP.EMN.UNAPPROVED="Approval for entry '%s' has been revoked."
 SP.EN.PUBLISHED="Entry '%s' has been published."
 SP.EN.UNPUBLISHED="Entry '%s' has been unpublished."
 SP.EMN.REORDERED="Entries are re-ordered now."
-
-;; Categories
 SP.HEADER_CATS_NAME="Category Name"
 SP.HEADER_CATS_STATE="State"
 SP.HEADER_CATS_APPROVAL="Approval"
@@ -480,16 +450,12 @@ SP.CATN.ORDER_BY_APPR_ASC="Not approved first"
 SP.CATN.ORDER_BY_APPR_DESC="Approved first"
 SP.CATN.ORDER_BY_ORDER_ASC="Position ascending"
 SP.CATN.ORDER_BY_ORDER_DESC="Position descending"
-
-;; Edit Entry
 SP.EDIT_EXISTING_ENTRY="Edit Entry 'var:[entry.name]'"
 SP.EN.ENTRY_GENERAL_DATA="General Data"
 SP.EN.BASE_DATA="Entry Data"
 SP.EN.ENTRY_PUBLISHING="Publishing"
 SP.EN.ENTRY_NAME="Entry Name"
 SP.ENTRY.CHECKED_OUT="Entry is being edited"
-
-;; Edit Category
 SP.CAT.CATEGORY_GENERAL_DATA="General Data"
 SP.EDIT_EXISTING_CATEGORY="Edit Category 'var:[category.name]'"
 SP.CAT.CATEGORY_CLOSE_WINDOW="Close"
@@ -514,9 +480,6 @@ SP.CAT.RESET_COUNT="Reset"
 SP.CAT.SHOW_ICON="Show Icon"
 SP.CAT.SHOW_INTROTEXT="Show Introtext"
 SP.ENTRY.HEADER_NAME="Name"
-
-; General Configuration
-;; Section
 SP.SECN.CFG.SECTION_CONFIGURATION="Section"
 SP.SECN.CFG.SECTION_NAME="Name"
 SP.SECN.ADD_SECTION_ALIAS="Alias"
@@ -524,15 +487,11 @@ SP.SECN.CFG.SECTION_DESCRIPTION="Description"
 SP.SECN.CFG.PUBLISHING="Publishing"
 SP.SECN.CFG.SETTINGS_BOOTSTRAP_DISABLED="Prevent loading Bootstrap 2 "
 SP.SECN.CFG.SETTINGS_ADVANCED="Advanced Settings"
-
-;; Template
 SP.SECN.CFG.TEMPLATE_DATA="Template"
 SP.SECN.CFG.WARNING="<strong>Heads up!</strong> The template settings can be overwritten completely or partially by specific template configuration files. Also customized templates may ignore some of these settings and behave otherwise."
 SP.SECN.CFG.SECTION_TEMPLATE="Used Template"
 SP.SECN.CFG.SHOW_TOP_MENU="Top Menu"
 SP.SECN.CFG.PARSE_TPL_CONTENT="Parse Output"
-
-;;; Category
 SP.SECN.CFG.SHOW_CATEGORY_DESC="Description"
 SP.SECN.CFG.PARSE_CATEGORY_DESC="Parse Description"
 SP.SECN.CFG.SHOW_CATEGORY_ICONS="Icons"
@@ -559,8 +518,6 @@ SP.SECN.CFG.CATEGORY_SETTINGS="Subcategory Settings"
 SP.SECN.CFG.SUBCATEGORY_SETTINGS="Sub-Subcategory Settings"
 SP.SECN.CFG.NUMBER_CATS_LINE="Number per Line"
 SP.SECN.CFG.NUMBER_SUBCATS="Number of Sub-Subcategories"
-
-;;; Entry
 SP.SECN.CFG.STOP_PUBLISHING_ENTRY_AFTER="Stop publishing after"
 SP.DAYS="days"
 SP.SECN.CFG.ENTRY_TITLE_FIELD="Name Field"
@@ -581,28 +538,19 @@ SP.SECN.CFG.ENTRY_ORDER_BY_UPDATE_DATE_DESC="Recently modified first"
 SP.SECN.CFG.ENTRY_ORDER_BY_EXPIRATION_DATE_ASC="Expires next first"
 SP.SECN.CFG.ENTRY_ORDER_BY_EXPIRATION_DATE_DESC="Expires next last"
 SP.SECN.ADD_SECTION_NAME="Name"
-SP.SECN.ADD_SECTION_ALIAS="Alias"
-
-;;; Search
 SP.SEC.CFG.SEARCH_SETTINGS="Search Settings"
 SP.SECOND_ORDER_DISABLED="Disabled"
 SP.SECN.CFG.SEARCH_SETTINGS_ORDER="Second Entries Ordering"
 SP.ORDER_BY_RANDOM="Random"
-
-;;; Alpha Listing
 SP.SECN.CFG.SHOW_ALPHA_MENU="Menu"
 SP.SECN.CFG.SHOW_ALPHA_VERIFY="Verify Links"
 SP.SECN.CFG.ALPHA_LETTERS="Letters"
 SP.SECN.CFG.ALPHA_FIELD="Primary Field"
 SP.SECN.CFG.ALPHA_FIELDS="Additional Fields"
-
-;; Meta Data
 SP.SECN.CFG.META_DATA_ADD="Add Meta Data"
 SP.SECN.CFG.META_DATA_SECTION="Section Main View"
 SP.SECN.CFG.META_DATA_INPUT="Entry Input Form"
 SP.SECN.CFG.META_DATA_SEARCH="Search Form"
-
-;; Redirects
 SP.SECN.CFG.REDIRECT_INFO="Redirects for specific SobiPro views if access is either prohibited by ACL or should lead to another page than the default one."
 SP.SECN.CFG.REDIRECT_SECTION="Section Views"
 SP.SECN.CFG.REDIRECT_CATEGORY="Category Views"
@@ -641,11 +589,7 @@ SP.MSG.ALL_CHANGES_SAVED="All changes saved."
 SP.SEC.DEL_WARN="This section cannot be deleted because it contains entries or/and categories. Please delete all categories and entries within this section first."
 SP.SEC.CREATED="New Section has been created. Please don\'t forget to create new permissions set for the newly created section."
 SP.SEC.CFG.ALPHAMENU_SETTINGS="Alpha-Listing Settings"
-
-;; Security
 SP.SECN.CFG.SECURITY_SETTINGS="Security"
-
-;; Crawler
 SP.CRAWLER.SITE_TITLE="Section Crawler"
 SP.CRAWLER.MENU="Section Crawler"
 SP.TB.START_CRAWL="Crawl"
@@ -655,8 +599,6 @@ SP.CRAWL_CODE="Response Code"
 SP.CRAWL_LINKS="Found Links"
 SP.CRAWL_TIME="Request Time"
 SP.CRAWL.INFO="Use the crawl function to check all SobiPro links and build up the SobiPro caches which are useful to speed up your site. This function may take some time."
-
-; Global Configuration
 SP.GBN.CFG.CACHE_HEAD="Optimisation"
 SP.GBN.CFG.DEB_HEAD="Debug & Error Logging"
 SP.GBN.CFG.DEB_DEBUG="Debug"
@@ -711,8 +653,6 @@ SP.GB.CFG.DEB_LEVEL_NONE="None"
 SP.GB.CFG.DEB_LEVEL_ERROR="Only Critical Errors"
 SP.GB.CFG.DEB_LEVEL_WARNING="Errors and Warnings (recommended)"
 SP.GB.CFG.DEB_LEVEL_ALL="All Errors, Warnings and Notices"
-
-;; Filters
 SP.GB.FILTERS="Input Filters"
 SP.FLR.MSG_FILTER_SAVED="All changes saved!"
 SP.FLR.MSG_FILTER_DELETED="Input filter has been deleted."
@@ -723,13 +663,10 @@ SP.FLR.FILTER_MSG="Error Message"
 SP.FLR.FILTER_REGEX="Filter Code"
 SP.FLR.SITE_TITLE="Input Filters"
 SP.FLR.FILTER_CORE_NE="Core filters are not editable"
-
-;; Error Log
 SP.ERR.SITE_TITLE="Error Log"
 SP.ERR.VARIABLES="Defined Variables"
 SP.ERR.CALLSTACK="Call Stack"
 SP.ERR.ERROR_LINE="At Line"
-SP.ERR.SITE_TITLE="Error Log"
 SP.ERR.ERROR_DATE="Error Date"
 SP.ERR.ERROR_LEVEL="Error Level"
 SP.ERR.RETURN_CODE="Return Code"
@@ -746,8 +683,6 @@ SP.ERR.ERROR_DETAILS="Error Details"
 SP.ERR.ERROR_LOG_NOT_DELETED="Could not delete error log. Error: var:[error]."
 SP.ERR.ERROR_LOG_DELETED="Error log has been deleted!"
 SP.ERR.NO_ERRORS="Error log is empty."
-
-;; Requirements
 SP.REQ.CHECKING_REQUIREMENTS="Please wait, checking requirements ... "
 SP.REQ.NEXT_BT="Next >>"
 SP.REQ.DOWNLOAD_BT="Download Systemcheck File"
@@ -789,9 +724,6 @@ SP.REQ.MYSQL_VIEW="Create View"
 SP.REQ.TIDY="Tidy HTML"
 SP.REQ.MYSQL_CACHE="MySQL Query Cache"
 SP.REQ.PARSE_INI="Configuration Files Parser"
-
-; Applications Installer/Repository
-SP.EXTENSIONS.HEADER_VERSION="Version"
 SP.EX.APP_ENABLED="Application \"%s\" has been enabled."
 SP.EX.APP_DISABLED="Application \"%s\" has been disabled."
 SP.EX.HEADER_NAME="Application Name"
@@ -823,7 +755,6 @@ SP.EX.LANGUAGE_TYPE="Language"
 SP.CMS_EXT_NOT_INSTALLED="Cannot install extension."
 SP.CMS_EXT_REMOVED="Extension \"%s\" has been removed."
 SP.CMS_EXT_NOT_REMOVED="Cannot remove extension \"%s\"."
-SP.ACL.MSG_STATE_CHANGED="Rule(s) state has been changed."
 SP.CMS_SOBIPRO_UPDATE_INSTALLED="SobiPro has been updated to the version %s."
 SP.EX.SSL_VERIFY="Repository provider information"
 SP.EX.CONNECTING_TO_REPO="Connecting to the repository."
@@ -909,8 +840,6 @@ SP.APPS.LIST_UPDATES="Core Updates"
 SP.EX.UPDATE_OLD_EXPL="The currently installed version is newer or equal."
 SP.EX.UPDATE_CORE="Update"
 SP.EX.UPDATE_REQUIRED="An update of SobiPro is required!"
-
-; ACL
 SP.ACL_SELECT_RULE_FIRST="Please select rule(s) from the list first!"
 SP.ACL_RULE_DELETED="ACL rule(s) has/have been deleted."
 SP.ACL_PERMISSION_TAB="Permissions"
@@ -953,8 +882,6 @@ SP.PERMISSIONS.ACCESS_UNPUBLISHED_ANY="access any unpublished"
 SP.PERMISSIONS.ACCESS_UNPUBLISHED_OWN="access own unpublished"
 SP.PERMISSIONS.PUBLISH_OWN="publish own"
 SP.PERMISSIONS.PUBLISH_*="publish any"
-
-; Template
 SP.TP.VER="Version"
 SP.TP.DATE="Created at"
 SP.TP.FILES_DECS="Template Files"
@@ -979,8 +906,6 @@ SP.TP.TEMPLATE_NAME="Template Name"
 SP.TP.TEMPLATES_OVERRIDE="Templates Override"
 SP.TP.CLONE_NOTE="Template based on var:[name], duplicated at var:[date]."
 SP.TP.TEMPLATE_HAS_BEEN_INSTALLED="Template var:[template] has been installed."
-
-; Adm Menu
 SP.SECTIONS="Sections"
 SP.SELECT_SECTION="Select section"
 SP.AMN.ENT_CAT="Entries & Categories"
@@ -997,14 +922,10 @@ SP.GB.ACL="Access Control List"
 SP.GB.APPS="Application Manager"
 SP.EX.MANAGER="Application Manager"
 SP.MN.ACL="Rules"
-
-;; List
 SP.LIST.ENABLE_S="Enable var:[type]"
 SP.LIST.DISABLE_S="Disable var:[type]"
 SP.LIST.ORDER_BY_FIELD="Order by field var:[field]"
 SP.LIST.MAKE_SELECTION="Please make a selection from the list"
-
-;;Messages
 SP.MSG.OBJ_SAVED="var:[type] has been saved."
 SP.MSG.OBJ_CLONED="var:[type] has been duplicated. You are currently editing the duplicated var:[type]."
 SP.MSG.HELP_ADD_CORE_REPO="You must add the SobiPro Core repository to access the documentation."
