--- a/Site/usr/locale/adm/en-GB.com_sobipro.messages.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.messages.ini
@@ -1,12 +1,11 @@
-; @version: $Id$
 ; @package: SobiPro Component for Joomla!
 
 ; @author
 ; Name: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH
 ; Email: sobi[at]sigsiu.net
-; Url: http://www.Sigsiu.NET
+; Url: https://www.Sigsiu.NET
 
-; @copyright Copyright (C) 2006 - 2015 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
+; @copyright Copyright (C) 2006 - 2015 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
 ; @license GNU/GPL Version 3
 ; This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
 ; as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
@@ -15,11 +14,7 @@
 ; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 ; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
-; $Date$
-; $Revision$
-; $Author$
-; $HeadURL$
-
+; Translations are made by our translation teams. See https://www.sigsiu.net/sobipro/available-languages/translation-teams.
 
 SP.WARNING.NO_NAME_FIELD_SELECTED="<strong>Warning</strong>: Please select a name field for this section!"
 SP.WARNING.ENTRIES_BASE_DATA_INCOMPLETE="<strong>Warning</strong>: Some entries are missing base data. Please check the configuration."
