Language file headers updated

--- a/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -1,11 +1,12 @@
+
 ; @package: SobiPro Component for Joomla!
 
 ; @author
 ; Name: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH
 ; Email: sobi[at]sigsiu.net
-; Url: http://www.Sigsiu.NET
+; Url: https://www.Sigsiu.NET
 
-; @copyright Copyright (C) 2006 - 2015 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
+; @copyright Copyright (C) 2006 - 2015 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
 ; @license GNU/GPL Version 3
 ; This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
 ; as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
@@ -14,14 +15,12 @@
 ; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 ; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
+; Translations are made by our translation teams. See https://www.sigsiu.net/sobipro/available-languages/translation-teams.
 
 SP.FD.URL_ADDRESS="URL address"
-
 SP.IMAGE_UPLOADED_CROP="File \"%s\" has been uploaded. Click on the image preview to change the visible area."
 SP.IMAGE_CROP_HEADER="Crop Image"
-
 SP.ITEMID_MISSING_WARN="It seems some URLs don't have a Joomla! Itemid set. Probably a menu entry to this particular section has not been created. You will find more information in the <a href='%s' target='_blank'>documentation</a>. Object id: %d"
-
 SP.SH.SEARCH_TOO_MANY_RESULTS="The search returned too many results (%d)! Only the first %d results will be shown. Please specify more criteria to narrow down the search."
 SP.FM.ICON="Icon"
 SP.ENTRY_STATUS_UNAPPROVED="The currently displayed version of this entry is 'unapproved'. You can see this version because you have permission to see unapproved entries."
@@ -29,8 +28,6 @@ SP.ENTRY_STATUS_UNPUBLISHED="The entry's status of this particular entry is 'unp
 SP.INFO_DIFFERENT_LANGUAGE="<strong>Heads up!</strong> You are editing this content (%s) in %s language. Please note, that all changes you make will be stored in this language!"
 SP.CRAWL_URL_PARSED_DONE="Done. Parsed %d links."
 SP.CRAWL_URL_PARSED_WORKING="Working... Parsed %d of %d pages in this loop."
-
-; Template texts
 SP.EXTENDED_SEARCH="Extended Search"
 SP.PAYMENT_CHOSEN_FOLLOWING_OPTIONS="You have chosen following non-free options"
 SP.PAYMENT_NEXT_STEP="What do you like to do?"
@@ -45,11 +42,9 @@ SP.ENTRY_MANAGE_ENABLE="Enable Entry"
 SP.ENTRY_MANAGE_APPROVE="Approve Entry"
 SP.ENTRY_MANAGE_EDIT="Edit Entry"
 SP.ENTRY_MANAGE_DELETE="Delete Entry"
-
 SP.UL.TITLE="var:[user]'s entries"
 SP.UL.PATH_TITLE="var:[user]'s entries"
 SP.SITES_COUNTER="Page %d of %d"
-
 SP.DL.PATH_TITLE_YEAR="Entries added in year var:[year]"
 SP.DL.PATH_TITLE_MONTH="Entries added in var:[month] of var:[year]"
 SP.DL.PATH_TITLE_DAY="Entries added at var:[date]"
@@ -58,7 +53,6 @@ SP.DL.TITLE_MONTH="Entries added in var:[month] of year var:[year]"
 SP.DL.TITLE_DAY="Entries added at var:[date]"
 SP.FM.URL.COUNTER_WITH_LABEL="var:[label] (visited var:[counter] times)"
 SP.FM.URL.EDIT_CLICKS="Visited %d times - click to reset"
-
 SP.START_UPLOAD="Upload"
 SP.FILE_UPLOADED="File \"%s\" has been uploaded."
 SP.UPLOAD_SELECT="Select File"
@@ -94,9 +88,7 @@ SP.PN.STARTICON="<i class='icon-fast-backward'></i>"
 SP.PN.PREVIOUSICON="<i class='icon-backward'></i>"
 SP.PN.NEXTICON="<i class='icon-forward'></i>"
 SP.PN.ENDICON="<i class='icon-fast-forward'></i>"
-
 SP.CAT.SELECT_ONE="You have to select at least one category"
-
 SP.STATE="State"
 SP.CREATED_AT="Created on"
 SP.VALID_SINCE="Valid from"
@@ -140,19 +132,11 @@ SP.STATE_NO="Disabled"
 SP.ENABLED_YES="Enabled"
 SP.ENABLED_NO="Disabled"
 COM_SOBIPRO="SobiPro"
-
-;=========
-; Messages
-;=========
 SP.MSG.OBJ_CHECKED_OUT="var:[type] has been checked out and cannot be edited at the moment."
 SP.MSG.OBJ_CHANGED="var:[type] has been changed."
 SP.MSG.OBJ_DELETED="var:[type] has been deleted."
 SP.MSG.OBJ_SAVED="var:[type] has been saved."
 SP.CAT.IS_CHECKED_OUT="This category is currently being edited by another user."
-
-;=========
-; Entry
-;=========
 SP.EN.ENTRY_SAVED="Entry has been saved."
 SP.EN.ENTRY_SAVED_NP="Entry has been saved but it is not published at the moment."
 SP.EN.ENTRY_SAVED_NA="Entry has been saved but changes are not approved at the moment."
@@ -168,10 +152,6 @@ SP.EN.UNPUBLISHED="Entry has been unpublished."
 SP.EN.ADD_TITLE="var:[section] - Add New Entry"
 SP.EN.ADD_PATH_TITLE="Add New Entry"
 SP.EN.IS_CHECKED_OUT="Entry '%s' is currently being edited by another user."
-
-;=========
-; Fields
-;=========
 SP.FD.DELETED="Field 'var:[field]' has been deleted."
 SP.FD.MAIL_EMAIL_ADDRESS="Email address"
 SP.FD.IMG_DELETE_CURRENT_IMAGE="Delete current image"
@@ -179,11 +159,6 @@ SP.FD.SEARCH_SELECT_LIST=" --- Select var:[name] -- "
 SP.FD.SEARCH_SELECT_LABEL=" --- select --- "
 SP.FD.SELECT_OPTION_NAME="Option Name"
 SP.FD.INBOX_SEARCH_SELECT=" --- Select var:[name] --- "
-
-
-;=========
-; Page Navigation
-;=========
 SP.PN.DISPLAY="Display #"
 SP.PN.ALL="All"
 SP.PN.START="Start"
@@ -191,11 +166,6 @@ SP.PN.PREVIOUS="Previous"
 SP.PN.NEXT="Next"
 SP.PN.END="End"
 SP.PN.CURRENT_SITE="Page var:[current] of var:[pages]"
-
-
-;=========
-; Search
-;=========
 SP.SH.SEARCH_FOR_BOX="Enter keywords"
 SP.SH.SEARCH_FOUND_RESULTS="Found var:[count] result(s)!"
 SP.SH.SEARCH_FOR="Search Keywords"
@@ -211,24 +181,12 @@ SP.SH.RANGE_FROM="From: "
 SP.SH.RANGE_TO="To: "
 SP.SH.SEARCH_SELECT_RANGE_FROM="var:[name] from"
 SP.SH.SEARCH_SELECT_RANGE_TO="var:[name] until"
-
-;=========
-; Listings
-;=========
 SP.AL.TITLE="var:[section] - Entries starting with 'var:[letter]'"
 SP.AL.PATH_TITLE="Entries starting with 'var:[letter]'"
 SP.AL.TITLE_FIELD="var:[section] - Entries with var:[field] starting with 'var:[letter]'"
 SP.AL.PATH_TITLE_FIELD="Entries with var:[field] starting with 'var:[letter]'"
-
-;=========
-; Menu
-;=========
 SP.MN.SEARCH="Search"
 SP.MN.ADD_ENTRY="Add Entry"
-
-;=========
-; Cat chooser
-;=========
 SP.CC.SELECT_PARENT_CAT="Select parent category"
 SP.CC.CURRENT_SELECTED_CATS="Currently selected categories"
 SP.CC.ADD_BT="Add Category"
@@ -237,19 +195,11 @@ SP.CC.SAVE_BT="Save"
 SP.CC.JMENU_DESC="As an option you can select a category which you would like to link to"
 SP.CC.JMENU_SAVE="Save selection"
 SP.CC.CURRENT_SELECTED_PATH="Currently selected path"
-
-;=========
-; Templates
-;=========
 SP.TP.REMOVE_CATEGORY_BT="Remove Category"
 SP.TP.ADD_CATEGORY_BT="Add Category"
 SP.TP.SAVE_BT="Close"
 SP.TP.CAT_BOX="Category:"
 SP.TP.SEL_CAT_BOX="Select Categories:"
 SP.TP.PAYMENT_ADD="Click the checkbox on the left side if you wish to activate this option."
-
-;=========
-; Applications
-;=========
 SP.APP.PBT.PAY_TITLE="Pay offline"
 SP.APP.PPP.PAY_TITLE="Pay with PayPal"
