--- a/Site/usr/locale/site/en-GB.com_sobipro.err.ini
+++ b/Site/usr/locale/site/en-GB.com_sobipro.err.ini
@@ -1,3 +1,4 @@
+
 ; @package: SobiPro Component for Joomla!
 
 ; @author
@@ -14,6 +15,7 @@
 ; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 ; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
+; Translations are made by our translation teams. See https://www.sigsiu.net/sobipro/available-languages/translation-teams.
 
 SP.IDENTIFIER_EXPECTED_DESC="Please take care of what you are selecting! Do not mix functions for categories and entries."
 SP.IMG_FIELD_RESIZE_NO_SIZE="You enabled the resize or crop option, but you didn't provide the width and/or height."
