--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -31,6 +31,7 @@ Legend:
     (+) Template setting to show/hide categories
 
     (!) Less influences of Joomla! template to Theme template
+    (+) Failback for wrong path in the image field
 
     (#) Missing default template configuration files added
     (#) Duplicate icons from Font Awesome 4 removed
