--- a/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
+++ b/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
@@ -16,6 +16,10 @@
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/sobipro/available-languages/translation-teams.
 
+SP.TP.CONFIG.FEATURE="Template Features"
+SP.TP.CONFIG.DOCUMENTATION="You will find information on how to use these settings in the <a href="https://www.sigsiu.net/default3-template-settings">documentation</a>. Support is available for members in our <a href="https://www.sigsiu.net/support">support area</a>."
+SP.TP.CONFIG.TEXTLENGTH="Length of text in vCard"
+SP.TP.CONFIG.CAROUSELIMG="Carousel image height"
 SP.TP.SETTINGS_GENERAL="General Settings"
 SP.TP.CONFIG.CSS="Template Style"
 SP.TP.CONFIG.CSS_COLOUR="Colour theme"
