(#) Small bux fixes in default template files

--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -33,7 +33,7 @@ Legend:
     (+) B2 input size styles implemented in B3 default template
     (+) Carousel support in default templates
     (+) Tooltip support in default templates
-    (+) Coloured tabs support in default templates
+    (+) Coloured tabs support in default B3 template
     (+) Several features added to the default template (e.g. shorten text, hiding categories, image ratio)
 
     (!) Less influences of Joomla! template to Theme template
@@ -41,6 +41,7 @@ Legend:
     (#) Missing default template configuration files added
     (#) Duplicate icons from Font Awesome 4 removed
     (#) Only one information field in a section works correctly
+    (#) Small bux fixes in default template files
 
 
 -------------------
