--- a/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
+++ b/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
@@ -44,6 +44,7 @@ SP.TP.CONFIG.TEXTLENGTH="Shorten text to"
 SP.TP.CONFIG.ENTRIES_IMGSIZESMALL="Image width"
 SP.TP.SETTINGS_DETAILS="Details View"
 SP.TP.CONFIG.CAROUSELIMG="Carousel image height"
+SP.TP.CONFIG.TABSTYLE="Tab style"
 
 SP.TP.SETTINGS_VIEW="View Settings"
 SP.TP.SETTINGS_VIEWFEATURE="View Features"
