--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -17,6 +17,8 @@
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/sobipro/available-languages/translation-teams.
 
+SP.SECN.CFG.SETTINGS_BOOTSTRAP3STYLES_LOAD="Load Bootstrap 3"
+
 SP.SECN.CFG.SETTINGS_BOOTSTRAP3STYLES="Bootstrap 3 styles"
 SP.FM.INFORMATION="Information"
 SP.FM.INFORMATION_OUT="Output"
