Basic backend ACL via Joomla! ACL manager.

--- a/Site/usr/locale/adm/en-GB.com_sobipro.sys.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.sys.ini
@@ -16,6 +16,8 @@
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/sobipro/available-languages/translation-teams.
 
+SP.MANAGE_APPS="Manage Applications"
+SP.MANAGE_APPS_DESC="Install, remove and change state of Apps and Templates"
 SP.SOBI_SELECT_FUNCTIONALITY="Select Functionality"
 SP.MENU_LINK_TO_CATEGORY="Link to a Category"
 SP.MENU_LINK_TO_SELECTED_CATEGORY="Link to category '%s'"
