--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -37,7 +37,11 @@ Legend:
     (+) Several features added to the default template (e.g. shorten text, hiding categories, image ratio)
     (+) Possibility to load Bootstrap 3 from CDN
 
+    (-) jQuery-UI library removed
+
     (!) Less influences of Joomla! template to Theme template
+    (!) Local Font-Awesome 3 icons without SobiPro scope
+    (!) Datepicker attached to body for Bootstrap 3 compatibility
 
     (#) Missing default template configuration files added
     (#) Duplicate icons from Font Awesome 4 removed
