--- a/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
+++ b/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
@@ -38,6 +38,7 @@ SP.TP.SETTINGS_SEARCH="Search Form Settings"
 SP.TP.SETTINGS_ENTRIES="Entries Settings"
 SP.TP.SETTINGS_FEATURES="General Features"
 SP.TP.CONFIG.ENTRIES_NOIMG="Show 'no image' placeholder"
+SP.TP.CONFIG.ENTRIES_FACCOL="Facilities colour"
 SP.TP.CONFIG.ENTRIES_IMGRATIO="Placeholder ratio"
 SP.TP.SETTINGS_VCARD="vCard"
 SP.TP.CONFIG.TEXTLENGTH="Shorten text to"
