Backend ACL - first deaft

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -18,6 +18,15 @@
 ; Translations are made by our translation teams. See https://www.sigsiu.net/sobipro/available-languages/translation-teams.
 
 SP.SECN.CFG.SETTINGS_BOOTSTRAP3STYLES_LOAD="Load Bootstrap 3"
+SP.ADM_PERMISSIONS.*_*="All Permissions"
+SP.ADM_PERMISSIONS.EDIT_*="Edit"
+SP.ADM_PERMISSIONS.ADD_*="Add"
+SP.ADM_PERMISSIONS.DELETE_*="Delete"
+SP.ADM_PERMISSIONS.APPROVE_*="Approve"
+SP.ADM_PERMISSIONS.PUBLISH_*="Publish"
+SP.ADM_PERMISSIONS.ACCESS_*="Access"
+SP.ADM_PERMISSIONS.CONFIGURE_*="Configure"
+
 
 SP.SECN.CFG.SETTINGS_BOOTSTRAP3STYLES="Bootstrap 3 styles"
 SP.FM.INFORMATION="Information"
