--- a/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
+++ b/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
@@ -22,6 +22,9 @@ SP.TP.CONFIG.CSS="Template Style"
 SP.TP.CONFIG.CSS_COLOUR="Colour theme"
 SP.TP.CONFIG.CSS_EDGE="Edge design"
 SP.TP.CONFIG.RSS="RSS Feeds"
+SP.TP.SETTINGS_PRINT="Printing"
+SP.TP.CONFIG.GALLERY="Gallery image size"
+SP.TP.CONFIG.PRINTIMG="Print Images"
 
 SP.TP.SETTINGS_ENTRY="Entry Form Settings"
 SP.TP.CONFIG.ENTRY_CSS_CLASS="Entry form class"
