--- a/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
+++ b/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
@@ -23,6 +23,7 @@ SP.TP.CONFIG.CSS_COLOUR="Colour theme"
 SP.TP.CONFIG.CSS_EDGE="Edge design"
 SP.TP.CONFIG.RSS="RSS Feeds"
 SP.TP.SETTINGS_PRINT="Printing"
+SP.TP.CONFIG.SHOWPRT="Show print button"
 SP.TP.CONFIG.GALLERY="Gallery image size"
 SP.TP.CONFIG.PRINTIMG="Print Images"
 
