--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -53,6 +53,7 @@ Legend:
     (#) Small bux fixes in default template files
     (#) Suffix layout in search view in B3-default3 template wrong
     (#) Multiple language nodes in SobiPro App definition were ignored
+    (#) Information field isn't installed during update (Issue #1535)
 
 
 -------------------
