--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -41,7 +41,7 @@ SP.TP.SETTINGS_NOT_SAVED="Template configuration could not been saved. %s"
 SP.FM.DEFAULT_VALUE="Default Value"
 SP.FM.SHOW_PLACEHOLDER="Show Placeholder"
 SP.FM.URL.NOFOLLOW="Add nofollow"
-SP.TB.COMPILESAVE="Compile & Save"
+SP.TB.COMPILESAVE="Save & Compile"
 SP.TB.COMPILE="Compile"
 SP.TP.LESS_FILE_COMPILED="Less file has been sucessfully compiled and stored in %s."
 SP.SECN.CFG.LOAD_ICONS_FONTS="Load Icon Fonts"
