(!) Font Awesome 4 updated to version 4.5.0

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -17,6 +17,7 @@
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/sobipro/available-languages/translation-teams.
 
+SP.SECN.DEPRECATED="These settings are deprecated and will be removed in the next major version of SobiPro!"
 SP.SECN.CFG.ENTRY_ORDER_BY_RANDOM="Random"
 
 SP.SECN.CFG.SETTINGS_BOOTSTRAP3STYLES_LOAD="Load Bootstrap 3"
