--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -45,6 +45,7 @@ Legend:
     (!) Local Font-Awesome 3 icons without SobiPro scope
     (!) Datepicker attached to body for Bootstrap 3 compatibility
     (!) Field labels now within CSS class
+    (!) Font Awesome 4 updated to version 4.5.0
 
     (#) Missing default template configuration files added
     (#) Duplicate icons from Font Awesome 4 removed
