--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -57,6 +57,7 @@ Legend:
     (#) Information field does not duplicate output data
     (#) Less file 'Compile & Save' now 'Save & Compile'
     (#) Missing message type after entry has been saved
+    (#) Buffer output not cleared for the payment screen when submitting an entry
 
     (*) Unregistered user with permission to edit "own" entry can access the edit form of an entries without assigned owner
 
