--- a/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
+++ b/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
@@ -38,6 +38,8 @@ SP.TP.CONFIG.ENTRY_HELPPOSITION_ABOVE="above"
 SP.TP.CONFIG.ENTRY_HELPPOSITION_BELOW="below"
 
 SP.TP.SETTINGS_SEARCH="Search Form Settings"
+SP.TP.SETTINGS_SEARCHGENERAL="General Settings"
+SP.TP.CONFIG.EXTENDEDSEARCH="Extended search button"
 
 SP.TP.SETTINGS_ENTRIES="Entries Settings"
 SP.TP.SETTINGS_FEATURES="General Features"
