(#) URL reverted while changing menu settings (Issue #1538)

--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -58,6 +58,7 @@ Legend:
     (#) Less file 'Compile & Save' now 'Save & Compile'
     (#) Missing message type after entry has been saved
     (#) Buffer output not cleared for the payment screen when submitting an entry
+    (#) URL reverted while changing menu settings (Issue #1538)
 
     (*) Unregistered user with permission to edit "own" entry can access the edit form of entries without assigned owner
 
