--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -59,6 +59,7 @@ Legend:
     (#) Missing message type after entry has been saved
     (#) Buffer output not cleared for the payment screen when submitting an entry
     (#) URL reverted while changing menu settings (Issue #1538)
+    (#) Missing existence check while copying files in image field (cloning) (Issue #1534)
 
     (*) Unregistered user with permission to edit "own" entry can access the edit form of entries without assigned owner
 
