(#) Issue with non-latin aliases (Issue #1515)

--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -61,6 +61,7 @@ Legend:
     (#) URL reverted while changing menu settings (Issue #1538)
     (#) Missing existence check while copying files in image field (cloning) (Issue #1534)
     (#) Removing double quotes from user names (Issue #1516)
+    (#) Issue with non-latin aliases (Issue #1515)
 
     (*) Unregistered user with permission to edit "own" entry can access the edit form of entries without assigned owner
 
